# LAD2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  etalon_1.txt  gdb_script_1.gdb  gdb_script_2.gdb  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  preload.c
06_Tracing/move.dSYM/Contents/Resources/DWARF/: move
07_Environmental/: Makefile.am  configure.ac  readme.md
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  maze.c  maze_1.patch  maze_2.patch  maze_3.patch
10_LibTesting/: Makefile.am  configure.ac  readme.md
10_LibTesting/src/: Makefile.am  buf.h  libbuf.c  libbuf.h
10_LibTesting/tests/: Makefile.am  tests.ts
10_LibTesting/tmp/: test1.c  test12.c  test3.c  test4.c  tests.h
11_Documenting/: Readme.md
11_Documenting/po/ru/LC_MESSAGES/: guess.mo
12_InstallPackaging/: Doxyfile  Makefile.am  Readme.md  configure.ac
12_InstallPackaging/po/: ru.po
12_InstallPackaging/roman/: Makefile.am  roman.c
12_InstallPackaging/src/: guess.c  roman.c  roman.h
12_InstallPackaging/test/: Makefile.am  test_roman.c
